@@ -46,9 +46,9 @@ class PodcastManagerViewFeed extends JView
 		$document = JFactory::getDocument();
 		$document->setMimeEncoding('application/rss+xml');
 
-		if($params->get('cache', true)) {
+		if ($params->get('cache', true)) {
 			$cache = JFactory::getCache('com_podcastmanager', 'output');
-			if($cache->start('feed', 'com_podcastmanager')) {
+			if ($cache->start('feed', 'com_podcastmanager')) {
 				return;
 			}
 		}
@@ -63,21 +63,21 @@ class PodcastManagerViewFeed extends JView
 		$xw->startElement('rss');
 		$xw->writeAttribute('xmlns:itunes', 'http://www.itunes.com/dtds/podcast-1.0.dtd');
 		$xw->writeAttribute('xmlns:atom', 'http://www.w3.org/2005/Atom');
-		$xw->writeAttribute('version','2.0');
-
-		$xw->startElement('channel');
+		$xw->writeAttribute('version', '2.0');
+		$xw->writeAttribute('type', 'application/rss+xml');
 
 		$xw->startElement('atom:link');
-		$xw->writeAttribute('href', JURI::root(false).'index.php?option=com_podcastmanager&view=feed&feedname='.$feed->id.'&format=raw');
+		$xw->writeAttribute('href', JURI::root(false).'index.php?option=com_podcastmanager&amp;view=feed&amp;feedname='.$feed->id.'&amp;format=raw');
 		$xw->writeAttribute('rel', 'self');
 		$xw->writeAttribute('type', 'application/rss+xml');
 		$xw->endElement();
 
+		$xw->startElement('channel');
+
 		$xw->writeElement('title', $feed->name);
 		$xw->writeElement('link', JURI::base());
 
-		$lang = JFactory::getLanguage();
-		$xw->writeElement('language', $lang->getTag());
+		$xw->writeElement('language', $feed->language);
 
 		$xw->writeElement('copyright', $feed->copyright);
 
